--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     background: #e84118;
 }
+
 h1 {
     position: absolute;
     top: 30%;
@@ -30,13 +31,12 @@ input {
     padding: 10px;
 }
 
-.search-box:hover>.search-txt {
+.search-box:hover>.search-txt,.search-txt:focus {
     width: 240px;
     padding: 0 6px;
     top: 50px;
 }
-
-.search-box:hover>.search-btn {
+.search-box:hover>.search-btn{
     background: white;
 }
 
