--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -30,13 +31,14 @@ body {
 }
 
 #main {
-    height: 70vh;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-#main #inputfield{
+
+#main #inputfield {
     border: 1px solid #cfd1d5;
     height: 20px;
     border-radius: 24px;
@@ -46,39 +48,56 @@ body {
     width: 600px;
     margin-top: 20px;
 }
-#main #inputfield:hover{
-    box-shadow: 0 1px 6px rgba(32,33,36,0.28);
+
+#main #inputfield:hover {
+    box-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);
 }
-#main #inputfield i{
+
+#main #inputfield i {
     color: lightgray;
 }
-#main #inputfield input{
-    width:100%;
-    border:none;
+
+#main #inputfield input {
+    width: 100%;
+    border: none;
     box-shadow: none !important;
     outline: none !important;
     margin-left: 7px;
-    font-size:15px;
+    font-size: 15px;
 }
+
 img {
     max-width: 55%;
     height: auto;
     margin-left: 22%;
 }
-#main #button{
+
+#main #button {
     display: flex;
     justify-content: center;
 }
-#main #button input{
+
+#main #button input {
     background-color: #f8f9fa;
     border: 1px solid #f8f9fa;
     border-radius: 5px;
     font-size: 14px;
     margin: 20px 9px;
-    padding: 10px;
+    padding: 8px;
+    padding-left: 15px;
+    padding-right: 15px;
     text-align: center;
-    cursor:pointer;
+    cursor: pointer;
 }
-#main #button input:hover{
-    box-shadow: 0 1px 6px rgba(32,33,36,0.28);
+
+#main #button input:hover {
+    box-shadow: 0 1px 3px rgba(32, 33, 36, 0.28);
+}
+
+#main #buttonicon {
+    background-color: #f8f9fa;
+    border: none;
+    padding: 8px;
+    border-radius: 0px;
+    cursor: pointer;
 }
