--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ img {
     height: auto;
     margin-left: 22%;
 }
-p{
+
+p {
     color: #4285f4;
 }
 
@@ -82,7 +83,7 @@ p{
     border-radius: 2px;
     font-size: 14px;
     margin: 20px 8px;
-    padding: 18px;
+    padding: 10px;
     padding-left: 14px;
     padding-right: 14px;
     text-align: center;
@@ -100,4 +101,16 @@ p{
     padding: 8px;
     border-radius: 0px;
     cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+
+    #main #inputfield {
+        width: 122%;
+        margin-left: -20%;
+    }
+
+    #main #button {
+        display: none;
+    }
 }
