--- a/style1.css
+++ b/style1.css
@@ -38,7 +38,20 @@ body {
 }
 
 img {
-    max-width: 10%;
+    position: absolute;
+    top: 0;
+    padding:20px;
+    max-width: 5.8%;
     height: auto;
-    float:top;
+}
+
+#main .adv{
+    color:#d93025;
+}
+@media screen and (max-width: 600px) {
+
+    img,#main #todo,#main .tododes{
+        display:none;
+    }
+    
 }
