--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ p {
 }
 
 #main #buttonicon {
-    background-color: #f8f9fa;
+    background-color: white;
     border: none;
     padding: 8px;
     border-radius: 0px;
