--- a/style1.css
+++ b/style1.css
@@ -99,6 +99,11 @@ hr {
     width: 100%;
 }
 
+input:focus {
+    outline: 1px solid #4d90fe;
+    box-shadow: inset 0 3px 5px -5px rgba(0,0,0,0.5);
+}
+
 #main .inputone .tododesheading {
     font-size: 13px;
     font-weight: 700;
@@ -136,11 +141,11 @@ span {
     border-radius: 2px;
     font-size: 11px;
     font-weight: bold;
-    
+
 }
 
 #main .inputone .button input:hover {
-    background-color: #4787ed;   
+    background-color: #4787ed;
 }
 
 @media screen and (max-width: 600px) {
